<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Base64</string>
    <string name="input_label">输入文本</string>
    <string name="input_hint">在此输入需要编码或解码的文本</string>
    <string name="output_label">输出结果</string>
    <string name="output_hint">结果将显示在这里</string>
    <string name="encode">编码</string>
    <string name="decode">解码</string>
    <string name="copy">复制结果</string>
    <string name="clear">清空</string>
    <string name="swap">交换</string>
</resources>